# auto-correct

./: .autocorrectignore  .gitignore  .rubocop.yml  .travis.yml  Cargo.toml  Changelog.md  Gemfile  README.md  Rakefile  auto-correct.gemspec  auto-space.gemspec
.github/workflows/: bench.yml  build.yml  release.yml
ext/: Rakefile
ext/autocorrect/: Cargo.toml  extconf.rb
ext/autocorrect/src/: lib.rs
lib/: auto-correct.rb  auto-space.rb
lib/auto-correct/: base.rb  configuration.rb  dicts.rb  disable.yml  enable.yml  format.rb  html.rb  noun.rb  strategery.rb  string.rb  version.rb
lib/auto-correct/auto_space/: base.rb  date.rb  english_letter.rb  english_word.rb  fullwidth_punctuation.rb  number.rb  special_symbol.rb
spec/: noun_spec.rb  text_spec.rb
spec/auto_space/: date_spec.rb  english_letter_spec.rb  english_word_spec.rb  fullwidth_punctuation_spec.rb  number_spec.rb  special_symbol_spec.rb
src/: lib.rs
test/: format_test.rb  html_test.rb  string_test.rb  test_helper.rb
test/fixtures/: example.expected.txt  example.txt
