[package]
name = "libautocorrect"
version = "0.1.0"
authors = ["Jason Lee <huacnlee@gmail.com>"]
edition = "2018"
description = "Automatically add whitespace between Chinese and half-width characters (alphabetical letters, numerical digits and symbols)."
homepage = "https://github.com/huacnlee/auto-correct.rs"
repository = "https://github.com/huacnlee/auto-correct.rs"
license = "MIT"
keywords = ["auto-correct", "fmt", "format", "spacing"]
readme = "README.md"

[lib]
name = "libautocorrect"
crate-type=["cdylib"]

[dependencies]
libc = "0.2.71"
autocorrect = "*"


[package.metadata.thermite]
cargo_project_path = "src"
ruby_project_path = "./"
ruby_extension_dir = "lib/auto-correct"
